[gd_scene load_steps=16 format=3 uid="uid://ot6xv36mhi2t"]

[ext_resource type="Script" path="res://scripts/dog/dog.gd" id="1_k3ryg"]
[ext_resource type="Texture2D" uid="uid://ccpg47u3cq08e" path="res://assets/textures/level/siba/siba.png" id="1_ol7om"]
[ext_resource type="Script" path="res://scripts/dog/states/dog_state_machine.gd" id="3_uedr2"]
[ext_resource type="Script" path="res://scripts/dog/states/dog_state_idle.gd" id="4_cypq3"]
[ext_resource type="Script" path="res://scripts/dog/states/dog_state_run.gd" id="4_ympsc"]
[ext_resource type="Script" path="res://scripts/dog/states/dog_state_jump.gd" id="5_0cnbw"]
[ext_resource type="Script" path="res://scripts/dog/dog_movement_controller.gd" id="7_w20pl"]
[ext_resource type="Script" path="res://scripts/dog/states/dog_state_tunnel.gd" id="8_tv3u4"]
[ext_resource type="Script" path="res://scripts/dog/states/dog_state_bounce.gd" id="9_xaq3x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8nqbn"]
atlas = ExtResource("1_ol7om")
region = Rect2(9, 79, 14, 14)

[sub_resource type="Animation" id="Animation_ph02j"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Person:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:visible")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Person:position")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -18)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Person:scale")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5, 5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:collision_mask")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_317o1"]
resource_name = "jump"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Person:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(5, 5), Vector2(6, 6), Vector2(5, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Person:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Person:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -18)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:collision_mask")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Shadow:scale")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(5, 5), Vector2(3, 3), Vector2(5, 5)]
}

[sub_resource type="Animation" id="Animation_bf2bd"]
resource_name = "run"
length = 0.75
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shadow:visible")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Person:frame")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1875, 0.375, 0.5625),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 3, 2, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Person:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1875, 0.375, 0.5625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -18), Vector2(0, -35), Vector2(0, -18), Vector2(0, -40), Vector2(0, -18)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Person:scale")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1875, 0.375, 0.5625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(5, 5), Vector2(5.5, 5.5), Vector2(5, 5), Vector2(5.5, 5.5), Vector2(5, 5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:collision_mask")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Shadow:scale")
tracks/5/interp = 0
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5, 5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1d3u4"]
_data = {
"idle": SubResource("Animation_ph02j"),
"jump": SubResource("Animation_317o1"),
"run": SubResource("Animation_bf2bd")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wll3j"]
radius = 28.0
height = 74.0

[node name="Siba" type="CharacterBody2D"]
collision_mask = 3
motion_mode = 1
platform_wall_layers = 7
script = ExtResource("1_k3ryg")
speed = 601.0

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, 39)
scale = Vector2(5, 5)
texture = SubResource("AtlasTexture_8nqbn")

[node name="Person" type="Sprite2D" parent="."]
position = Vector2(0, -18)
scale = Vector2(5, 5)
texture = ExtResource("1_ol7om")
hframes = 3
vframes = 3
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1d3u4")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_wll3j")

[node name="DogMovementController" type="Node" parent="." node_paths=PackedStringArray("_target")]
script = ExtResource("7_w20pl")
_target = NodePath("..")

[node name="DogStateMachine" type="Node" parent="." node_paths=PackedStringArray("target", "state")]
script = ExtResource("3_uedr2")
target = NodePath("..")
state = NodePath("DogStateIdle")

[node name="DogStateRun" type="Node" parent="DogStateMachine"]
script = ExtResource("4_ympsc")

[node name="DogStateJump" type="Node" parent="DogStateMachine"]
script = ExtResource("5_0cnbw")

[node name="DogStateTunnel" type="Node" parent="DogStateMachine"]
script = ExtResource("8_tv3u4")

[node name="DogStateBounce" type="Node" parent="DogStateMachine"]
script = ExtResource("9_xaq3x")

[node name="DogStateIdle" type="Node" parent="DogStateMachine"]
script = ExtResource("4_cypq3")

[connection signal="animation_finished" from="AnimationPlayer" to="DogStateMachine/DogStateJump" method="_on_animation_finished"]
